# busylight

./: .gitignore  README.md  build_app.sh  busylights.py  busylights_gui.py  busylights_menubar.py  main.py  mic_status.py  pyproject.toml
BusylightsApp/: GoveeClient+Discovery.swift  GoveeClientDiscoveryTests.swift  GoveeClientTests.swift
BusylightsApp.xcodeproj/: Package.swift
BusylightsAppTests/: BusylightsAppTests.swift
assets/: app_icon.icns
